force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/AcctPlanExistingLongTermLoan__c.object-meta.xml
<CustomObject>
    <label>Account Plan Existing Long Term Loan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Existing Long Term Loan Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Existing Long Term Loan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>