force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/AcctPlanWallet__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanWallet__c</fullName>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Existing Long Term Loan</relationshipLabel>
    <relationshipName>Account_Plan_Existing_Long_Term_Loan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>