force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank</description>
    <inlineHelpText>Bank</inlineHelpText>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Account Plan Existing Long Term Loan</relationshipLabel>
    <relationshipName>Account_Plan_Existing_Long_Term_Loan</relationshipName>
    <type>Lookup</type>
</CustomField>