force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>Bank</description>
    <formula>Bank__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bank</inlineHelpText>
    <label>BankName</label>
    <type>Text</type>
</CustomField>