force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currency</description>
    <inlineHelpText>Currency</inlineHelpText>
    <label>CCY</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Account Plan Existing Long Term Loan</relationshipLabel>
    <relationshipName>Account_Plan_Existing_Long_Term_Loan</relationshipName>
    <type>Lookup</type>
</CustomField>