force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/CCYAmtFullyHedge__c.field-meta.xml
<CustomField>
    <fullName>CCYAmtFullyHedge__c</fullName>
    <description>Currency Amount Fully hedge?</description>
    <inlineHelpText>Currency Amount Fully hedge?</inlineHelpText>
    <label>CCYAmtFullyHedge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>