force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/CCYName__c.field-meta.xml
<CustomField>
    <fullName>CCYName__c</fullName>
    <description>Currency</description>
    <formula>CCY__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Currency</inlineHelpText>
    <label>CCYName</label>
    <type>Text</type>
</CustomField>