force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <description>Collatoral</description>
    <inlineHelpText>Collatoral</inlineHelpText>
    <label>Collateral</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core asset</fullName>
            </value>
            <value>
                <fullName>Non Core asset</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>