force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/CollateralDetail__c.field-meta.xml
<CustomField>
    <fullName>CollateralDetail__c</fullName>
    <description>Collateral Detail</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Collateral Detail</inlineHelpText>
    <label>CollateralDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>