force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/EquivalentAmount__c.field-meta.xml
<CustomField>
    <fullName>EquivalentAmount__c</fullName>
    <description>Amount (Baht/Equivalent Baht)</description>
    <inlineHelpText>Amount (Baht/Equivalent Baht)</inlineHelpText>
    <label>Amount (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>