force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/HedgingTenor__c.field-meta.xml
<CustomField>
    <fullName>HedgingTenor__c</fullName>
    <description>Hedging tenor</description>
    <inlineHelpText>Hedging tenor</inlineHelpText>
    <label>HedgingTenor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>