force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/InterestFixedRate__c.field-meta.xml
<CustomField>
    <fullName>InterestFixedRate__c</fullName>
    <description>Interest Rate</description>
    <inlineHelpText>Interest Rate</inlineHelpText>
    <label>Interest rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>