force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/InterestFloatingRate__c.field-meta.xml
<CustomField>
    <fullName>InterestFloatingRate__c</fullName>
    <description>Floating rate</description>
    <inlineHelpText>Floating rate</inlineHelpText>
    <label>InterestFloatingRate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>THB FIX</fullName>
            </value>
            <value>
                <fullName>MLR</fullName>
            </value>
            <value>
                <fullName>BIBOR</fullName>
            </value>
            <value>
                <fullName>LIBOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>