force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/InterestFullyHedge__c.field-meta.xml
<CustomField>
    <fullName>InterestFullyHedge__c</fullName>
    <description>Interest Type - Interest rate</description>
    <inlineHelpText>Interest Type - Interest rate</inlineHelpText>
    <label>InterestFullyHedge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>