force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/InterestType__c.field-meta.xml
<CustomField>
    <fullName>InterestType__c</fullName>
    <description>Interest Type (Fixed/Float)</description>
    <inlineHelpText>Interest Type (Fixed/Float)</inlineHelpText>
    <label>InterestType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed rate</fullName>
            </value>
            <value>
                <fullName>Floating rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>