force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/LTVPercent__c.field-meta.xml
<CustomField>
    <fullName>LTVPercent__c</fullName>
    <description>LTV (%)</description>
    <inlineHelpText>LTV (%)</inlineHelpText>
    <label>LTV (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>