force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/NimcPercent__c.field-meta.xml
<CustomField>
    <fullName>NimcPercent__c</fullName>
    <description>NIMc (%)</description>
    <inlineHelpText>NIMc (%)</inlineHelpText>
    <label>NIMc (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>