force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/RemainingTenorsYear__c.field-meta.xml
<CustomField>
    <fullName>RemainingTenorsYear__c</fullName>
    <description>Remaining Tenors (Years)</description>
    <inlineHelpText>Remaining Tenors (Years)</inlineHelpText>
    <label>Remaining Tenors (Yrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>