force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>Remark</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Remark</inlineHelpText>
    <label>Remark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>