force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/TypeOfLoan__c.field-meta.xml
<CustomField>
    <fullName>TypeOfLoan__c</fullName>
    <description>Type of Loan</description>
    <inlineHelpText>Type of Loan</inlineHelpText>
    <label>TypeOfLoan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bilateral Loan</fullName>
            </value>
            <value>
                <fullName>Syndicated loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>