force-app/main/default/objects/AcctPlanExistingLongTermLoan__c/fields/WalletNiicYearly__c.field-meta.xml
<CustomField>
    <fullName>WalletNiicYearly__c</fullName>
    <description>Wallet NIIc (Yearly)</description>
    <inlineHelpText>Wallet NIIc (Yearly)</inlineHelpText>
    <label>Wallet NIIc (Yearly)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>